Updated expected test results